# ESP32-C3-rust

./: .gitignore  Cargo.toml  README.md  TUTORIAL.md  diagram.json  rust-toolchain.toml  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
src/: main.rs
