[package]
name = "esp32c3-demo"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Plantilla ESP32-C3 con Rust no_std: potenciómetro, botón y LED con simulación en Wokwi"
authors = ["ESP32-C3 Rust Template"]

[dependencies]
esp-hal       = { version = "1.1", features = ["esp32c3", "unstable"] }
esp-backtrace = { version = "0.19", features = ["esp32c3", "panic-handler", "println"] }
esp-println   = { version = "0.17", features = ["esp32c3", "log-04"] }
nb            = "1.1"

[profile.dev]
opt-level = "s"
debug = true

[profile.release]
opt-level = "s"
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1
